Fixed footer whitespace

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -42,7 +42,7 @@
 
 .wrapper {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	width: 100%;
 	max-width: 1400px;
 	padding: 1.5rem 0.5rem;
